chore: create seeds, and add omniauth
