# api/app/models/user.rb
@@ -18,9 +18,9 @@ class User < ApplicationRecord
     where(provider: auth.provider, uid: auth.uid).first_or_create do |user|
       user.email      = auth.info.email
       user.password   = Devise.friendly_token[0, 20]
-      user.first_name = auth.info.first_name || auth.info.name&.split&.first || ""
-      user.last_name  = auth.info.last_name  || auth.info.name&.split&.last  || ""
-      user.username   = auth.info.nickname   || auth.info.email.split("@").first
+      user.first_name = auth.info.first_name.presence || ""
+      user.last_name  = auth.info.last_name.presence  || ""
+      user.username   = auth.info.nickname.presence   || auth.info.email.to_s.split("@").first
     end
   end
 end
